# haskell-golf-wwshjts

./: README.md  stack.yaml  test.cabal
.github/workflows/: classroom.yml
golf/: golf.cabal
golf/src/: Main.hs
src/: Task1.hs
test/: Runner.hs  Task1Suite.hs
